# lego-brick-detection

./: .gitignore  README.md  REMOVAL_SUMMARY.md  pyproject.toml  requirements.txt  verify_removal.sh
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
logs/: metrics.json  metrics_report.csv
specs/001-detection-toggle/: plan.md  spec.md  tasks.md
specs/001-lego-brick-finder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-parallel-init-qt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-yolov7-model-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-brick-list-interface/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  detect.py  main.py
src/gui/: brick_list_item.py  brick_list_widget.py  camera_config_dialog.py  detection_panel.py  main_window.py  set_info_panel.py  settings_dialog.py  video_display.py
src/loaders/: set_loader.py
src/models/: brick.py  detection_params.py  detection_result.py  lego_set.py  video_source.py
src/utils/: config_manager.py  image_cache.py  logger.py  progress_tracker.py
src/vision/: __init__.py  brick_detector.py  camera_scanner.py  color_matcher.py  contour_analyzer.py  detection_engine.py  detection_state.py  model_loader.py  video_tester.py  video_utils.py
tests/: validate_integration.py
tests/unit/: test_brick_list_logic.py  test_brick_model.py  test_detection_feedback.py  (+2 more)
(+12 files in other folders)
